--- a/eshop_apps/templates/includes/header.html
+++ b/eshop_apps/templates/includes/header.html
@@ -13,8 +13,8 @@
                 {% if user.is_authenticated %}
                     <li><span class="white-label">Hello {{ user.username }},</span> <a class="logout" href="{% url "auth_logout" %}?next=/">Logout</a></li>
                 {% else %}
-                <li ><a href="{% url "auth_login" %}"  >Login</a></li>
-                <li><a  href="{% url "registration_register" %}"  >Register</a></li>
+                <li ><a href="{% url 'auth_login' %}"  >Login</a></li>
+                <li><a  href="{% url 'registration_register' %}"  >Register</a></li>
                 {% endif %}
 
             </ul>
