--- a/eshop_apps/other_apps/shopping_cart/templates/cart.html
+++ b/eshop_apps/other_apps/shopping_cart/templates/cart.html
@@ -46,7 +46,7 @@
 			 <a class="continue" href="{% url "index" %}">Continue to store</a>
 			 <div class="price-details">
 				 <h3>Price Details</h3>
-				 <span style="font-weight: bold; font-size: 12px;">Total Price:</span>
+				 <span style="font-weight: bold; font-size: 12px;">Total Price Per Day:</span>
 				 <span class="total1">{{ total_price }} €</span>
 				 <div class="clearfix"></div>
 			 </div>
