--- a/eshop_apps/templates/includes/head.html
+++ b/eshop_apps/templates/includes/head.html
@@ -1,3 +1,4 @@
+<!--suppress ALL -->
 <head>
 <title>New Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
     {% load staticfiles %}
@@ -11,13 +12,19 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--fonts-->
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'><!--//fonts-->
 <!-- start menu -->
 <link href="{% static "css/memenu.css" %}" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="{% static "css/jquery.timepicker.css" %}" type="text/css">
 <link rel="stylesheet" href="{% static "css/custom.css" %}" type="text/css">
+    <script type="text/javascript" src="{% static "js/jquery.timepicker.js" %}"></script>
 <script type="text/javascript" src="{% static "js/memenu.js" %}"></script>
 <script>$(document).ready(function(){$(".memenu").memenu();});</script>
 <script src="{% static "js/simpleCart.min.js" %}"> </script>
