--- a/eshop_apps/templates/includes/footer.html
+++ b/eshop_apps/templates/includes/footer.html
@@ -14,11 +14,9 @@
 				</div>
 				<div class="col-md-4 amet-sed ">
 				<h4>CONTACT US</h4>
-
-					<p>
-Contrary to popular belief</p>
-					<p>The standard chunk</p>
-					<p>office:  +12 34 995 0792</p>
+					<p>Addr: Eleftheriou Venizelou 70</p>
+					<p>Area: Kallithea, 176 76</p>
+					<p>Tel: 21 0954 9101</p>
 					<ul class="social">
 						<li><a href="#"><i> </i></a></li>
 						<li><a href="#"><i class="twitter"> </i></a></li>
@@ -40,6 +38,6 @@ and promo</p>
 			</div>
 		</div>
 		<div class="footer-class">
-		<p >© 2015 New store All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		<p >© 2017 Navisot </p>
 		</div>
 		</div>
