--- a/eshop_apps/templates/includes/slideshow.html
+++ b/eshop_apps/templates/includes/slideshow.html
@@ -15,34 +15,24 @@
   </script>
 			<div  id="top" class="callbacks_container">
 			<ul class="rslides" id="slider">
+				<li>
+						<div class="banner-text">
+							<h3>Free Registration</h3>
+						<p>Get a discount of 20% in your first order.</p>
+								<a href="{% url 'registration_register' %}">Learn More</a>
+
+						</div>
+
+				</li>
 			    <li>
 
 						<div class="banner-text">
-							<h3>Lorem Ipsum is not simply dummy  </h3>
-						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor .</p>
-						<a href="single.html">Learn More</a>
+							<h3>Find The Latest Movies To Rent </h3>
+						<p>The new released movies are shown below. Don't miss a chance to rent one for a small charge.</p>
 						</div>
 
 				</li>
-				<li>
 
-						<div class="banner-text">
-							<h3>There are many variations </h3>
-						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor .</p>
-												<a href="single.html">Learn More</a>
-
-						</div>
-
-				</li>
-				<li>
-						<div class="banner-text">
-							<h3>Sed ut perspiciatis unde omnis</h3>
-						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor .</p>
-								<a href="single.html">Learn More</a>
-
-						</div>
-
-				</li>
 			</ul>
 		</div>
 
