--- a/eshop_apps/static/css/custom.css
+++ b/eshop_apps/static/css/custom.css
@@ -118,3 +118,18 @@ span.price_special {
 .text-center.special {
    margin:20px;
 }
+
+.amet-sed p {
+    color: #cacaca;
+    font-size: 14px;
+    margin: 0 0 0.3em;
+    font-family: Roboto;
+}
+
+ul.nav-bottom li a {
+    text-decoration: none;
+    color: #cacaca;
+    font-size: 14px;
+    display: inline-block;
+    margin: 0.1em 0;
+}
