--- a/eshop_apps/other_apps/shopping_cart/templates/checkout_review.html
+++ b/eshop_apps/other_apps/shopping_cart/templates/checkout_review.html
@@ -84,7 +84,7 @@
 	 </div>
     <script>
 		$('#timepicker').timepicker({ 'timeFormat': 'H:i:s' });
-		$( "#datepicker" ).datepicker({ dateFormat: 'dd-mm-yy' });
+		$( "#datepicker" ).datepicker({ dateFormat: 'dd-mm-yy' , minDate:0});
 
         $(".close1").on('click', function(){
 
