--- a/eshop_apps/other_apps/user_details/templates/user_history.html
+++ b/eshop_apps/other_apps/user_details/templates/user_history.html
@@ -16,11 +16,18 @@
                      <div class="history_date">
                          <h4 class="fixed">{{order.created|date:"d-m-Y"}}</h4>
                      </div>
-                     <h2>Order #{{forloop.counter}}</h2><br>
+                     <h2>Order #{{forloop.counter}}</h2>
+                     <div class="mg"><span class="total_price">Total Price: {{order.total_order_price}} EUR</span></div>
                      <h4>Selected Movies:</h4>
-                            {% for m in movies %}
-                                {% if m.order_id == order.id %} <p class="selected_movie"><a href="{% url 'movie_details' m.movie_id %}">{{ m.title }}</a></p> {% endif %}
-                            {% endfor %}
+
+                     <!-- Movie Title And Quantity -->
+                     {% for details in order_details %}
+                        {% if details.order_id == order.id %}
+                            <p class="selected_movie"><a href="{% url 'movie_details' details.product_id %}">{{details.product_title}}</a> x {{details.quantity}} ({{details.product_price}}€)</p>
+                        {% endif %}
+                     {% endfor %}
+
+                     <!-- Invoices -->
                      {% for invoice in invoices %}
                          {% if order.id == invoice.order_id %} <a href="{% url 'invoice_pdf' invoice.id %}">Download Invoice</a>  {% endif %}
                      {% endfor %}
