Close To Finish - Pagination Tomorrow

--- a/eshop_apps/other_apps/homeapp/templates/genre_movies.html
+++ b/eshop_apps/other_apps/homeapp/templates/genre_movies.html
@@ -19,7 +19,17 @@
                     </div>
                 </a>
                 <p><a href="{% url 'movie_details' movie_id=genre.movie.id  %}" title="{{genre.movie.title}}">{{ genre.movie.title | truncatechars:20 }}</a></p><br>
-            <a class="btn btn-warning btn-sm addToCart" href="#" data-id="{{ genre.movie.id }}">Add To Cart</a>
+             {% if user.is_authenticated %}
+                    {% for q in quantities %}
+                        {% if q.id == genre.movie.id %}
+                            {% if q.quantity == 0 %}
+                                <a class="btn btn-danger btn-sm" href="#">Out Of Stock</a>
+                            {% else %}
+                                <a class="btn btn-warning btn-sm addToCart" href="#" data-id="{{ genre.movie.id }}">Add To Cart</a>
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
             </div>
             {% endfor %}
             {% endif %}
@@ -40,8 +50,10 @@
                     console.log(data);
                     if (data.status == 'success') {
                         alert('Movie Added In Your Cart');
+                    } else if (data.status == 'no_available'){
+                        alert('Out Of Stock')
                     } else {
-                        alert('Something Went Wrong');
+                        alert('Something Went Wrong')
                     }
                 },
                 error: function(){
