--- a/eshop_apps/static/css/custom.css
+++ b/eshop_apps/static/css/custom.css
@@ -37,6 +37,10 @@ p.details {
     margin-bottom: 20px;
 }
 
+.btn-danger{
+    margin-bottom: 20px;
+}
+
 .btn-genre{
     background-color: #fff;
     border: 1px solid #d7d7d7;
