--- a/eshop_apps/other_apps/homeapp/templates/homepage.html
+++ b/eshop_apps/other_apps/homeapp/templates/homepage.html
@@ -32,6 +32,29 @@
 
             <div class="clearfix"></div>
         </div>
+        <nav class="in">
+            {% if data.has_other_pages %}
+              <ul class="pagination">
+                {% if data.has_previous %}
+                  <li><a href="?page={{ data.previous_page_number }}">&laquo;</a></li>
+                {% else %}
+                  <li class="disabled"><span>&laquo;</span></li>
+                {% endif %}
+                {% for i in data.paginator.page_range %}
+                  {% if data.number == i %}
+                    <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                  {% else %}
+                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                  {% endif %}
+                {% endfor %}
+                {% if data.has_next %}
+                  <li><a href="?page={{ data.next_page_number }}">&raquo;</a></li>
+                {% else %}
+                  <li class="disabled"><span>&raquo;</span></li>
+                {% endif %}
+              </ul>
+            {% endif %}
+        </nav>
     </div>
 
     <script>
