--- a/eshop_apps/templates/includes/header.html
+++ b/eshop_apps/templates/includes/header.html
@@ -3,7 +3,7 @@
 
     <div class="search">
             <form id="search_bar" action="{% url 'multi_search' %}">
-                <input type="text" name="query" placeholder="Search movie,tv,person...">
+                <input type="text" name="query" placeholder="Search movie,actor,director...">
                 <input type="submit" value="Go">
             </form>
     </div>
