--- a/eshop_apps/other_apps/homeapp/templates/movies_actors.html
+++ b/eshop_apps/other_apps/homeapp/templates/movies_actors.html
@@ -32,12 +32,8 @@
                     </div>
                 </a>
                 {% else %}
-                <a href="/search/actor?query={{keyword}}" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="https://image.tmdb.org/t/p/w600_and_h900_bestv2/{{result.profile_path}}" alt="">
-                <div class="b-wrapper">
-                        <h3 class="b-animate b-from-left    b-delay03 ">
-                            <span>Show Actor's Movies</span>
-                        </h3>
-                    </div>
+                <a href="" class="b-link-stripe b-animate-go  thickbox"><img class="img-responsive" src="https://image.tmdb.org/t/p/w600_and_h900_bestv2/{{result.profile_path}}" alt="">
+
                 </a>
                 {% endif %}
                 {% endif %}
@@ -61,9 +57,6 @@
             {% endif %}
             <div class="clearfix"></div>
         </div>
-        {% if not data %}
-                <h1>No Results Found</h1>
-            {% else %}
         <nav class="in">
               <ul class="pagination">
                   {% for page in total_pages %}
@@ -79,7 +72,6 @@
                   {% endfor %}
               </ul>
         </nav>
-     {% endif %}
     </div>
 
     <script>
