--- a/eshop_apps/other_apps/homeapp/templates/single_movie.html
+++ b/eshop_apps/other_apps/homeapp/templates/single_movie.html
@@ -94,7 +94,7 @@
 
 			<div class="clearfix"> </div>
 	 </div>
-
+{{dir}}
 <div class="col-md-12">
     <h2 class="text-center">Top Actors</h2><br>
     {% for person in credits %}
