--- a/eshop_apps/templates/includes/footer.html
+++ b/eshop_apps/templates/includes/footer.html
@@ -2,17 +2,17 @@
 				<div class="container">
 			<div class="footer-top-at">
 
-				<div class="col-md-4 amet-sed">
-				<h4>MORE INFO</h4>
-				<ul class="nav-bottom">
-						<li><a href="#">How to order</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="contact.html">Location</a></li>
-						<li><a href="#">Shipping</a></li>
-						<li><a href="#">Membership</a></li>
-					</ul>
-				</div>
-				<div class="col-md-4 amet-sed ">
+				<!--<div class="col-md-4 amet-sed">-->
+				<!--<h4>MORE INFO</h4>-->
+				<!--<ul class="nav-bottom">-->
+						<!--<li><a href="#">How to order</a></li>-->
+						<!--<li><a href="#">FAQ</a></li>-->
+						<!--<li><a href="contact.html">Location</a></li>-->
+						<!--<li><a href="#">Shipping</a></li>-->
+						<!--<li><a href="#">Membership</a></li>-->
+					<!--</ul>-->
+				<!--</div>-->
+				<div class="col-md-8 amet-sed ">
 				<h4>CONTACT US</h4>
 					<p>Addr: Eleftheriou Venizelou 70</p>
 					<p>Area: Kallithea, 176 76</p>
