--- a/eshop_apps/templates/includes/head.html
+++ b/eshop_apps/templates/includes/head.html
@@ -1,6 +1,6 @@
 <!--suppress ALL -->
 <head>
-<title>New Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
+<title>DjangoShop - Rent Movies Online</title>
     {% load staticfiles %}
 <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
