--- a/eshop_apps/templates/includes/logo.html
+++ b/eshop_apps/templates/includes/logo.html
@@ -1,4 +1,4 @@
 <div class="logo">
     {% load static %}
-    <a href="{% url "index" %}"><img src="{% static "images/logo.png" %}" alt=""></a>
+    <a href="{% url "index" %}" class="logodjango">DjangoShop</a><br><small class="description_logo">Rent Movies Online</small>
 </div>
