--- a/eshop_apps/other_apps/shopping_cart/templates/order_completed.html
+++ b/eshop_apps/other_apps/shopping_cart/templates/order_completed.html
@@ -7,7 +7,7 @@
         <div class="col-md-12 cart-items">
             <div class="border-box-details">
                 <br>
-            <div class="text-center alert alert-success">Your Order Has Been Completed!</div><br>
+            <div class="text-center alert alert-success"><h3>Your Order Has Been Completed!</h3></div><br>
             <h4 class="text-center" style="text-decoration:underline;">You have choose <span class="delivery_details">{{delivery_date|date:"d M Y"}} | {{delivery_time|date:"H:i"}}</span> as delivery details!</h4><br>
             <h5 class="text-center"><a href="{% url 'user_history'%}" style="font-size:20px;">Show My History</a></h5><br><br>
             </div>
